add environment variable

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 #database
-spring.datasource.url=jdbc:postgresql://localhost:5432/market
-spring.datasource.username=postgres
-spring.datasource.password=salazar
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 #CredentialUserDetailService
-user.detail.username=admin
-user.detail.password=market
+user.detail.username=
+user.detail.password=
 
