--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,7 +1,7 @@
 server.port=${PORT}
 
 #database
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=jdbc:${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
