--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,9 +1,9 @@
 server.port=${PORT}
 
-#database
-spring.datasource.url=jdbc:${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# Database
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #CredentialUserDetailService
 userDetal_username=${SERVICE_USERNAME}
